--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,26 +4,26 @@ name: CI
 
 on:
     pull_request:
-        branches: ["master"]
+        branches: ["main"]
     push:
-        branches: ["master"]
+        branches: ["main"]
 
 jobs:
-    ci:
+    test_import:
         runs-on: ubuntu-latest
         steps:
-            - name: checkout
+            - name: Check out this repo
               uses: actions/checkout@v2
 
-            - name: install latest tutor
+            - name: Install latest Tutor
               run: pip install tutor
 
-            - name: disable tutor-mfe
+            - name: Disable tutor-mfe
               run: |
                   tutor plugins disable mfe
                   tutor config save
 
-            - name: launch tutor
+            - name: Launch Tutor
               run: tutor local launch --non-interactive
 
             # We need a user to exist, since all libraries need an owner.
@@ -34,3 +34,31 @@ jobs:
 
             - name: import course & libraries
               run: make import
+
+    source_and_tars_match:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Check out this repo
+              uses: actions/checkout@v2
+
+            - name: Unpack tars
+              run: make unpack
+
+            - name: Confirm that unpacked tars match source
+              run: |
+                  git update-index --refresh && git diff-index HEAD -- && {
+                      echo -e "\033[1;32m=============================================================================\033[0m"
+                      echo -e "\033[1;32mUnpacked .tar.gz files do match source XML, all is well.\033[0m"
+                      echo -e "\033[1;32m=============================================================================\033[0m"
+                      exit 0
+                  } || { 
+                      echo -e "\033[1;31m=============================================================================\033[0m"
+                      echo -e "\033[1;31mERROR: Unpacked .tar.gz files do not match source XML! See differences below.\033[0m"
+                      echo -e "\033[0;31mYou can fix this by either:\033[0m"
+                      echo -e "\033[0;31m * updating the source using the tars (run: make unpack), or\033[0m"
+                      echo -e "\033[0;31m * updating the tars using the source (run: make dist).\033[0m"
+                      echo -e "\033[1;31m=============================================================================\033[0m"
+                      git diff
+                      exit 1
+                  }
+
